Sun Jul 13 18:05:44 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tds.h src/tds/mem.c src/tds/token.c:
	- save product name from wire

Sat Jul 12 17:31:07 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- continue merging Steve Murphree patch (#757369)
	- fix memory corruption after merge

Fri Jul 11 17:07:50 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* include/tdsodbc.h src/odbc/odbc.c:
	- start merging Steve Murphree patch (#757369)
	* src/tds/read.c: fix compile problem

Fri Jul  4 19:03:10 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* src/replacements/iconv.c verified working, passes unit tests
	* include/tds.h include/tdsiconv.h
	* src/server/login.c src/tds/iconv.c src/tds/login.c
	* src/tds/mem.c src/tds/read.c src/tds/token.c src/tds/write.c
	- new tds_iconv() follows iconv(3) signature and emits client-side
	- messages in case of error.  This build does not require libiconv.  

Thu Jul  3 21:27:37 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/odbc.c src/odbc/odbc_util.c src/odbc/odbc_util.h:
	* src/odbc/sql2tds.c src/tds/query.c:
	- fixed ODBC RPC

Wed Jul  2 22:32:49 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/sql2tds.c src/odbc/unittests/funccall.c:
	- fix some issues with RPC (not finished)

Tue Jul  1 22:22:54 CET 2003	Frediano Ziglio <freddy77@angelfire.com>
	* src/odbc/native.c src/odbc/odbc.c:
	- applied Peter Daecon patch

Tue Jul  1 09:41:12 EDT 2003	Mark Lilback <mark@lilback.com>
	* src/ctlib/ct.c added null check to tdsdump_log call in ct_connect

Tue Jul  1 01:28:34 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tdsiconv.h 
	* src/tds/encodings.h src/tds/encodings.pl src/tds/iconv.c
	- Add ASCII conversions
	* src/replacements/iconv.c Fix blatant errors

Mon Jun 30 00:53:14 EDT 2003	JK Lowden <jklowden@schemamania.org>
	* include/tds.h include/tdsiconv.h include/sybdb.h
	* src/dblib/dbutil.c src/dblib/error_table.h